Top vertical scrollbar tool not working properly 3.6.8 LTS #117572

Closed
opened 2024-01-27 10:02:52 +01:00 by jeroenb · 6 comments

System Information
Operating system: Windows 10
Graphics card: GTX1070

Blender Version
Broken: 4.1
Broken: 3.6.8
Worked: 3.3.10 and 4.0.2

Caused by ed556113ce

Manipulating the view with the top vertical control point of scrollbar not working properly. This happens in the video editor and in the graph editor (maybe in other editors as well), see picture.

Exact steps for others to reproduce the error
Try manipulating the view with the top vertical scrollbar control points.

**System Information** Operating system: Windows 10 Graphics card: GTX1070 **Blender Version** Broken: 4.1 Broken: 3.6.8 Worked: 3.3.10 and 4.0.2 Caused by ed556113cea2f82c6a98d75ce3a9600f0ebb1a1b Manipulating the view with the top vertical control point of scrollbar not working properly. This happens in the video editor and in the graph editor (maybe in other editors as well), see picture. **Exact steps for others to reproduce the error** Try manipulating the view with the top vertical scrollbar control points.
jeroenb added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-01-27 10:02:53 +01:00
jeroenb changed title from Top vertical scrollbar tool not working properly 3.3.8 LTS to Top vertical scrollbar tool not working properly 3.6.8 LTS 2024-01-27 12:15:18 +01:00
Member

Can confirm, assume this is caused by own 4f127b9654, will check

Can confirm, assume this is caused by own 4f127b96548b08230421b3ef86ae40a91a5d1f8d, will check
Philipp Oeser self-assigned this 2024-01-29 12:15:25 +01:00
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-01-29 12:15:34 +01:00
Philipp Oeser added
Module
User Interface
Priority
High
and removed
Priority
Normal
labels 2024-01-29 12:16:50 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-08 14:26:04 +01:00
Author

Updated to 3.6.9 LTS, problem is still there.

Updated to 3.6.9 LTS, problem is still there.
jeroenb reopened this issue 2024-02-21 08:55:06 +01:00
Blender Bot added
Status
Needs Triage
and removed
Status
Resolved
labels 2024-02-21 08:56:11 +01:00
Member

Hm, for some reason this was not on the backport list, I have added it again now, see #109399.
Terribly sorry, but this will only be in 3.6.10 then (or some 3.6.10 candidate builds from https://builder.blender.org/download/daily/)...

Thx, poking, but will close again (since it is now on the backport list).

Hm, for some reason this was not on the backport list, I have added it again now, see #109399. Terribly sorry, but this will only be in 3.6.10 then (or some 3.6.10 candidate builds from https://builder.blender.org/download/daily/)... Thx, poking, but will close again (since it is now on the backport list).
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2024-02-21 09:10:29 +01:00
Author

Updated to 3.6.10 LTS, problem is still there.

Updated to 3.6.10 LTS, problem is still there.
Member

@jeroen3325 : the fix caused a followup issue, that needs to be resolved first to be backported.

And yes, again, sorry this takes a while to resolve.

@jeroen3325 : the fix caused a followup issue, that needs to be resolved first to be backported. And yes, again, sorry this takes a while to resolve.
Member

@jeroen3325 : the fix caused a followup issue, that needs to be resolved first to be backported.

And yes, again, sorry this takes a while to resolve.

For reference, see the discussion in #118550

> @jeroen3325 : the fix caused a followup issue, that needs to be resolved first to be backported. > > And yes, again, sorry this takes a while to resolve. For reference, see the discussion in #118550
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117572
No description provided.