source/blender/editors/space_spreadsheet/spreadsheet_intern.hh
@@ -12,6 +12,8 @@ struct SpaceSpreadsheet_Runtime {
   int visible_rows = 0;
   int tot_rows = 0;
   int tot_columns = 0;
+  int index_column_width = 0;
+  int top_row_height = 0;
 
   blender::ed::spreadsheet::SpreadsheetCache cache;
 
